--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -15,7 +15,7 @@
       [(ngModel)]="model.password"
       placeholder="Password">
     <div class="form-group text-center mt-2">
-      <button class="btn btn-success mr-2" type="submit">Register</button>
+      <button class="btn btn-primary mr-2" type="submit">Register</button>
       <button class="btn btn-danger ml-2" type="button" (click)="cancel()">Cancel</button>
     </div>
   </div>
