--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" routerLinkActive="active" routerLink="/">Dating App</a>
     <ul class="navbar-nav mr-auto">
-      <ng-container  *ngIf="accountService.currentUser$ | async">
+      <ng-container *ngIf="accountService.currentUser$ | async">
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/members">Matches</a>
         </li>
@@ -13,6 +13,9 @@
           <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
         </li>
       </ng-container>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/errors">Errors</a>
+      </li>
     </ul>
 
     <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
@@ -24,19 +27,11 @@
       </div>
     </div>
 
-    <form #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()"
-      autocomplete="off" *ngIf="(accountService.currentUser$ | async) === null">
-      <input
-        name="username"
-        [(ngModel)]="model.username"
-        class="form-control mr-sm-2"
-        type="text"
+    <form #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off"
+      *ngIf="(accountService.currentUser$ | async) === null">
+      <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="text"
         placeholder="Username">
-      <input
-        name="password"
-        [(ngModel)]="model.password"
-        class="form-control mr-sm-2"
-        type="password"
+      <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password"
         placeholder="Password">
       <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
