--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,22 +1,37 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
   <div class="form-group">
-    <input
-      class="form-control mb-2"
-      type="text"
-      name="username"
-      [(ngModel)]="model.username"
-      placeholder="Username">
-    <input
-      class="form-control mt-2"
-      type="password"
-      name="password"
-      [(ngModel)]="model.password"
-      placeholder="Password">
-    <div class="form-group text-center mt-2">
-      <button class="btn btn-primary mr-2" type="submit">Register</button>
-      <button class="btn btn-danger ml-2" type="button" (click)="cancel()">Cancel</button>
-    </div>
+    <label class="control-label" style="margin-right: 10px;">I am a: </label>
+    <label class="radio-inline">
+      <input type="radio" value="male" formControlName="gender">Male
+    </label>
+    <label class="radio-inline">
+      <input type="radio" value="female" formControlName="gender" class="ml-3">Female
+    </label>
+    <label class="radio-inline">
+      <input type="radio" value="other" formControlName="gender" class="ml-3">Other
+    </label>
+  </div>
+  <app-text-input [formControl]="registerForm.controls['username']" [label]="'Username'"></app-text-input>
+  <app-text-input [formControl]="registerForm.controls['knownAs']" [label]="'Known As'"></app-text-input>
+  <app-date-input [formControl]="registerForm.controls['dateOfBirth']" [label]="'Date Of Birth'" [maxDate]="maxDate">
+  </app-date-input>
+  <app-text-input [formControl]="registerForm.controls['city']" [label]="'City'"></app-text-input>
+  <app-text-input [formControl]="registerForm.controls['country']" [label]="'Country'"></app-text-input>
+  <app-text-input [formControl]="registerForm.controls['password']" [label]="'Password'" [type]="'password'">
+  </app-text-input>
+  <app-text-input [formControl]="registerForm.controls['confirmPassword']" [label]="'Confirm Password'"
+    [type]="'password'"></app-text-input>
+  <div class="row" *ngIf="validationErrors.length > 0">
+    <ul class="text-danger">
+      <li *ngFor="let err of validationErrors">
+        {{err}}
+      </li>
+    </ul>
+  </div>
+  <div class="form-group text-center mt-2">
+    <button class="btn btn-primary mr-2" type="submit" [disabled]="!registerForm.valid">Register</button>
+    <button class="btn btn-danger ml-2" type="button" (click)="cancel()">Cancel</button>
   </div>
 </form>
