--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -14,11 +14,11 @@
         </div>
         <div>
           <strong>Last Active:</strong>
-          <p>{{member.lastActive | date: 'dd/MM/yyyy'}}</p>
+          <p>{{member.lastActive | timeago}}</p>
         </div>
         <div>
           <strong>Member Since:</strong>
-          <p>{{member.created | date: 'dd/MM/yyyy'}}</p>
+          <p>{{member.created | date: 'dd MMM yyyy'}}</p>
         </div>
       </div>
       <div class="card-footer">
