--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -3,10 +3,10 @@
 </div>
 <div class="container mt-3">
   <div class="row">
-    <div class="btn-group" name="predicate">
+    <div class="btn-group col-6" name="predicate">
       <button class="btn btn-primary" btnRadio="liked" [(ngModel)]="predicate" (click)="loadLikes()">Members I
         like</button>
-      <button class="btn btn-primary" btnRadio="likedBy" [(ngModel)]="predicate" (click)="loadLikes()">Members who like
+      <button class="btn btn-info" btnRadio="likedBy" [(ngModel)]="predicate" (click)="loadLikes()">Members who like
         me</button>
     </div>
   </div>
@@ -15,4 +15,10 @@
       <app-member-card [member]="member"></app-member-card>
     </div>
   </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+  <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+    previousText="&lsaquo;" nextText="&raquo;" [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)">
+  </pagination>
 </div>
