messaging front end half done

--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -6,7 +6,7 @@
     <div class="btn-group col-6" name="predicate">
       <button class="btn btn-primary" btnRadio="liked" [(ngModel)]="predicate" (click)="loadLikes()">Members I
         like</button>
-      <button class="btn btn-info" btnRadio="likedBy" [(ngModel)]="predicate" (click)="loadLikes()">Members who like
+      <button class="btn btn-primary" btnRadio="likedBy" [(ngModel)]="predicate" (click)="loadLikes()">Members who like
         me</button>
     </div>
   </div>
