--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -1,1 +1,55 @@
-<p>messages works!</p>
+<div class="row mb-4">
+  <div class="btn-group col-6" name="container">
+    <button class="btn btn-primary" btnRadio="Unread" (click)="loadMessages()" [(ngModel)]="container">
+      <i class="fa fa-envelope"></i> Unread
+    </button>
+    <button class="btn btn-primary" btnRadio="Inbox" (click)="loadMessages()" [(ngModel)]="container">
+      <i class="fa fa-envelope-open"></i> Inbox
+    </button>
+    <button class="btn btn-primary" btnRadio="Outbox" (click)="loadMessages()" [(ngModel)]="container">
+      <i class="fa fa-paper-plane"></i> Outbox
+    </button>
+  </div>
+</div>
+
+<div class="row" *ngIf="messages?.length === 0">
+  <h3>No messages</h3>
+</div>
+
+<div class="row" *ngIf="messages?.length > 0">
+  <table class="table table-hover" style="cursor: pointer;">
+    <tr>
+      <th style="width: 40%;">Message</th>
+      <th style="width: 20%;">From / To</th>
+      <th style="width: 20%;">Sent / Recieved</th>
+      <th style="width: 20%;"></th>
+    </tr>
+    <tr *ngFor="let message of messages" routerLink="{{container == 'Outbox'
+        ? '/members/' + message.recipientUsername
+        : '/members/' + message.senderUsername}}">
+      <td class="breakWord">{{message.content}}</td>
+      <td>
+        <div *ngIf="container === 'Outbox'">
+          <img class="img-circle rounded-circle mr-2" src="{{message.recipeintPhotoUrl || './assets/user.png'}}"
+            alt="{{messages.recipientUsername}}">
+          <strong>{{message.recipientUsername | titlecase}}</strong>
+        </div>
+        <div *ngIf="container !== 'Outbox'">
+          <img class="img-circle rounded-circle mr-2" src="{{message.senderPhotoUrl || './assets/user.png'}}"
+            alt="{{messages.senderUsername}}">
+          <strong>{{message.senderUsername | titlecase}}</strong>
+        </div>
+      </td>
+      <td>{{message.messageSent | timeago}}</td>
+      <td>
+        <button class="btn btn-danger">Delete</button>
+      </td>
+    </tr>
+  </table>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+  <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+    previousText="&lsaquo;" nextText="&raquo;" [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)">
+  </pagination>
+</div>
