--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -24,9 +24,9 @@
       <th style="width: 20%;">Sent / Recieved</th>
       <th style="width: 20%;"></th>
     </tr>
-    <tr *ngFor="let message of messages" routerLink="{{container == 'Outbox'
+    <tr [hidden]="loading" *ngFor="let message of messages" routerLink="{{container == 'Outbox'
         ? '/members/' + message.recipientUsername
-        : '/members/' + message.senderUsername}}">
+        : '/members/' + message.senderUsername}}" [queryParams]="{tab: 3}">
       <td class="breakWord">{{message.content}}</td>
       <td>
         <div *ngIf="container === 'Outbox'">
@@ -42,13 +42,14 @@
       </td>
       <td>{{message.messageSent | timeago}}</td>
       <td>
-        <button class="btn btn-danger">Delete</button>
+        <button (click)="$event.stopPropagation()" class="btn btn-danger"
+          (click)="deleteMessage(message.id)">Delete</button>
       </td>
     </tr>
   </table>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading && messages.length > 0">
   <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
     previousText="&lsaquo;" nextText="&raquo;" [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)">
   </pagination>
