--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -3,6 +3,9 @@
     <div class="card">
       <img class="card-img-top img-thumbnail" src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}">
       <div class="card-body">
+        <div class="mb-2" *ngIf="(presence.onlineUsers$ | async).includes(member.username)">
+          <i class="fa fa-user-circle text-success"></i>Online now
+        </div>
         <h1 class="card-title">{{member.knownAs}}</h1>
         <div>
           <strong>Location:</strong>
